# duck

./: .clang_complete  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  License  README.md  Readme.md  bits.h  integer.h  main.cpp  package.cmake.in  range.h  raw_pointer.h  types.h
cpp-utils/: integer.h  raw_pointer.h
cpp/duck/: command_line.cpp  command_line.h  format.h  small_vector.h  tagged_ptr.h  tree_view.h  type_traits.h  utility.h  view.cpp
cpp/duck/range/: range.h
cpp/experiments/: array.cpp  dynamic_struct.cpp  fixed_point.cpp
cpp/test/: frozen_ptr.cpp  optional_2_nocompile.cpp  range_6_nocompile.cpp  range_algorithm.cpp  range_combinator.cpp  small_vector.cpp  tagged_ptr.cpp  tree_view.cpp  utility.cpp
cpp/to_include/: Readme  raw_pointer.h
duck/: CMakeLists.txt  command_line.cpp  command_line.h  debug.h  dynamic_struct.h  format.h  frozen_ptr.h  integer_range.h  iterator.h  maybe_type.h  optional.h  range.h  range_algorithm.h  range_combinator.h  small_unique_ptr.h  small_vector.h  tagged_ptr.h  tree_view.h  type_operations.h  type_traits.h  types.h  variant.h  view.cpp  view.h
duck/format/: basic.h  combinator.h  core.h  equality.h  format.h
duck/iterator/: facade.h  integer.h  maybe_traits.h  traits.h
duck/old_range/: algorithm.h  combinator.h  range.h
duck/range/: algorithm.h  base.h  combinator.h  combinator_v2.h  integer.h  range.h  range_v3.h
experiments/: CMakeLists.txt  dynamic_struct.cpp  dynamic_struct.h  maybe_uninit.cpp  uv.cpp
include/cpp-utils/: integer.h  raw_pointer.h  types.h
other_code/: copy_elision_test.cpp  inline_buffer.h  runtime_concept.cpp  views.cpp
ternary/: Cargo.toml
ternary/src/: lib.rs
test/: CMakeLists.txt  bits.cpp  bits_alt_3_nocompile.cpp  bits_nocompile.cpp  bits_run.cpp  command_line.cpp  dynamic_struct.cpp  format.cpp  format_2_nocompile.cpp  format_basic.cpp  format_combinator.cpp  format_core.cpp  format_extra.cpp  frozen_ptr.cpp  iterator_facade.cpp  iterator_maybe_traits.cpp  iterator_traits.cpp  main.cpp  maybe_type.cpp  meta_maybe_type.cpp  old_range.cpp  old_range_2_nocompile.cpp  old_range_algorithm.cpp  old_range_combinator.cpp  optional.cpp  range.cpp  range_2_nocompile.cpp  range_6_nocompile.cpp  range_algorithm.cpp  range_algorithm_run.cpp  range_combinator.cpp  range_combinator_run.cpp  range_run.cpp  range_v2_combinator.cpp  range_v3.cpp  small_unique_ptr.cpp  small_vector.cpp  tagged_ptr.cpp  tree_view.cpp  type_traits.cpp  (+3 more)
test/disabled/: bits_3_nocompile.cpp  range_algorithm.cpp  range_run.cpp
to_include/: array.cpp  inline_buffer.cpp  integer.h
